<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FMNC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_string">Start</string>
    <string name="stop_string">Stop</string>
    <string name="scan_string">Scan</string>
    
    <string name="pref_enable_summary">Allow reporting via wifi connection</string>
    <string name="pref_enable">Enable Wifi</string>
    <string name="pref_enableCell">Enable Cell</string>
    <string name="pref_enable_cell_summary">Allow reporting via cell connection</string>
    <string name="pref_wifi_roam">Enable Wifi Roam</string>
    <string name="pref_wifi_roam_summary">Allow reporting when switching wifi access points</string>
    <string name="pref_cell_roam">Enable Cell Roam</string>
    <string name="pref_cell_roam_summary">Allow reporting on a cellular roam</string>
    
    <string name="console_string">FMNC Console</string>
    <string name="console_clear_string">Clear</string>
    <string name="console_dump_string">Dump</string>

</resources>
