<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nd.fmnc.MainViewFragment" >

    <TextView
        android:id="@+id/fragmenttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="StartService"
        android:text="@string/start_string" />

    <Button
        android:id="@+id/stopbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="StopService"
        android:text="@string/stop_string" />
    
    <Button
       	android:id="@+id/scanbutton"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:onClick="ForceScan"
       	android:text="@string/scan_string" />

</LinearLayout>
