<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/console_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/console_string" 
        android:textSize="18sp"
        android:padding="10dp"/>

    <ListView
        android:id="@+id/console_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/console_text" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/console_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/console_clear_string"
            android:onClick="clearList" />

        <Button
            android:id="@+id/console_dump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/console_dump_string"
            android:onClick="dumpInfo" />
    </LinearLayout>

</RelativeLayout>